...
        TextButton(
            onClick = onClickSeeAll,
            contentPadding = PaddingValues(0.dp),
            modifier = Modifier.align(Alignment.CenterVertically)
        ) {
            Text(
                text = "SEE ALL",
                style = MaterialTheme.typography.button,
               // modifier = Modifier.semantics { contentDescription = "See all one" },
                modifier = Modifier.testTag ( "See all one" ),

            )
        }
    }
}
...
